# softwaredebugger

./: .gitignore  README.md  package-lock.json  package.json
agent-service/: pyproject.toml  requirements.txt
agent-service/agent_service/: langgraph_graph.py  main.py
agent-service/agent_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: DashboardPage.tsx  JobDetailPage.tsx  JobsPage.tsx
